# obsidian-web-mcp

./: pyproject.toml
docs/superpowers/plans/: 2026-03-26-semantic-search.md
docs/superpowers/specs/: 2026-03-26-semantic-search-design.md
src/obsidian_vault_mcp/: auth.py  config.py  frontmatter_index.py  models.py  oauth.py  server.py  vault.py
src/obsidian_vault_mcp/retrieval/: __init__.py  bm25.py  chunker.py  embeddings.py  indexer.py  models.py  search.py
src/obsidian_vault_mcp/tools/: admin.py  manage.py  read.py  search.py  semantic_search.py  write.py
tests/: test_bm25.py  test_chunker.py  test_frontmatter.py  test_retrieval_models.py  test_search_fusion.py  test_semantic_search.py
