[project]
name = "obsidian-web-mcp"
version = "0.1.0"
description = "Secure remote MCP server for Obsidian vaults -- access your notes from Claude, your phone, or any MCP client, anywhere"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
semantic = [
    "chromadb>=0.5.0,<1.5.5",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "torch>=2.0.0,<2.11",
]

[project.scripts]
vault-mcp = "obsidian_vault_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_vault_mcp"]

[tool.uv]
# Use PyTorch CPU-only index to avoid pulling ~2GB of NVIDIA CUDA libraries
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
